Cleanup Modrinth service and test runner